--- a/server/src/config_generator/homeassistant_templates/input_number_template.yaml
+++ b/server/src/config_generator/homeassistant_templates/input_number_template.yaml
@@ -96,7 +96,7 @@
     step: 1
     mode: "box"
 
-  lamp_blue:
+  lamp1_blue:
     name: "Lamp blue amplitude"
     initial: 0 
     min: 0
@@ -104,7 +104,7 @@
     step: 1
     mode: "box"
 
-  lamp_green:
+  lamp1_green:
     name: "Lamp green amplitude"
     initial: 0 
     min: 0
@@ -112,7 +112,7 @@
     step: 1
     mode: "box"
 
-  lamp_red:
+  lamp1_red:
     name: "Lamp red amplitude"
     initial: 0 
     min: 0
@@ -120,7 +120,39 @@
     step: 1
     mode: "box"
 
-  lamp_far_red:
+  lamp1_far_red:
+    name: "Lamp far_red amplitude"
+    initial: 0 
+    min: 0
+    max: 1000
+    step: 1
+    mode: "box"
+
+  lamp2_blue:
+    name: "Lamp blue amplitude"
+    initial: 0 
+    min: 0
+    max: 1000
+    step: 1
+    mode: "box"
+
+  lamp2_green:
+    name: "Lamp green amplitude"
+    initial: 0 
+    min: 0
+    max: 1000
+    step: 1
+    mode: "box"
+
+  lamp2_red:
+    name: "Lamp red amplitude"
+    initial: 0 
+    min: 0
+    max: 1000
+    step: 1
+    mode: "box"
+
+  lamp2_far_red:
     name: "Lamp far_red amplitude"
     initial: 0 
     min: 0
@@ -133,7 +165,7 @@
     initial: 50
     min: 30
     max: 80
-    step: 1
+    step: 0.1
     mode: "box"
 
   temp_ref:
@@ -141,7 +173,7 @@
     initial: 20
     min: 10
     max: 50
-    step: 1
+    step: 0.1
     mode: "box"
 
   co2_ref:
