Some comments and minor tweaks

--- a/.env_template
+++ b/.env_template
@@ -252,9 +252,6 @@ VOLUMEFLOW_11_HA_UNIT="m3/s"
 VOLUMEFLOW_11_HA_ICON="mdi:air-filter"
 
 
-# ---------- LEGGER TIL NY SENSOR --------------
-
-# Litt usikker på device identifier her
 # CO2_VOC_2 sensor #
 MQTT_SENSOR_12_DT_REQ="dt/gf/CO2VOC/2/req"
 MQTT_SENSOR_12_DT_RES="dt/gf/CO2VOC/2/res"
@@ -419,10 +416,13 @@ SOLID_STATE_RELAY_01_CMD_REQ_AUTOMATION_ALIAS="Solid state relay 01, Update stat
 SOLID_STATE_RELAY_01_CMD_REQ_ON_AUTOMATION_ALIAS="Solid state relay 01, Turn on"
 SOLID_STATE_RELAY_01_CMD_REQ_OFF_AUTOMATION_ALIAS="Solid state relay 01, Turn off"
 SOLID_STATE_RELAY_01_CMD_REQ_STOP_PWM_LOOP_AUTOMATION_ALIAS="Solid state relay 01, Stop PWM loop"
+SOLID_STATE_RELAY_01_CMD_REQ_TURN_ON_FOR_AUTOMATION_ALIAS="Solid state relay 01, Turn on for {{ states('input_number.ssr_turn_on_for') | round(0) }} seconds"
+
 
 SSR_DUTY_CYCLE={{  states('input_number.ssr_duty_cycle') | round(0) }}
 SSR_BASE_PERIOD={{  states('input_number.ssr_base_period') | round(0) }}
 SSR_STOP_LOOP={{  states('input_boolean.solid_state_relay_stop_loop') }}
+SSR-TIME = {{  states('input_number.ssr_turn_on_for') | round(0) }}
 
 # FAN VOLTAGE
 MQTT_FAN_VOLTAGE_CMD_REQ="cmd/fan_voltage/req"
@@ -438,48 +438,64 @@ MQTT_VALVE_VOLTAGE_CMD_REQ_AUTOMATION_ALIAS="Valve voltage, Update"
 
 
 # Grow lamp1: Heliospectra Elixia 
-LAMP_01_IP="10.10.10.10" # Replace with the IP address of the Heliospectra Elixia grow lamp
+LAMP_01_IP="10.53.11.165" # Replace with the IP address of the Heliospectra Elixia grow lamp
 MQTT_LAMP_01_CMD_REQ="cmd/lamp01/req"
 MQTT_LAMP_01_CMD_RES="cmd/lamp01/res"
 MQTT_LAMP_01_DT_REQ="dt/lamp01/req"
 MQTT_LAMP_01_DT_RES="dt/lamp01/res"
 LAMP_01_CMD_REQ_AUTOMATION_ALIAS="Lamp 01, Update LED intensity"
 # Channel input number states for automation
-CHANNEL_450NM_STATE={{  states('input_number.elixia_1_channel_450nm') | round(0) }}
-CHANNEL_660NM_STATE={{  states('input_number.elixia_1_channel_660nm') | round(0) }}
-CHANNEL_735NM_STATE={{  states('input_number.elixia_1_channel_735nm') | round(0) }}
-CHANNEL_5700K_STATE={{  states('input_number.elixia_1_channel_5700k') | round(0) }}
+L1CHANNEL_450NM_STATE={{  states('input_number.elixia_1_channel_450nm') | round(0) }}
+L1CHANNEL_660NM_STATE={{  states('input_number.elixia_1_channel_660nm') | round(0) }}
+L1CHANNEL_735NM_STATE={{  states('input_number.elixia_1_channel_735nm') | round(0) }}
+L1CHANNEL_5700K_STATE={{  states('input_number.elixia_1_channel_5700k') | round(0) }}
 
 # Grow lamp2: Heliospectra Elixia 
-LAMP_02_IP="10.10.10.10" # Replace with the IP address of the Heliospectra Elixia grow lamp
+LAMP_02_IP="10.53.9.231" # Replace with the IP address of the Heliospectra Elixia grow lamp
 MQTT_LAMP_02_CMD_REQ="cmd/lamp02/req"
 MQTT_LAMP_02_CMD_RES="cmd/lamp02/res"
 MQTT_LAMP_02_DT_REQ="dt/lamp02/req"
 MQTT_LAMP_02_DT_RES="dt/lamp02/res"
 LAMP_02_CMD_REQ_AUTOMATION_ALIAS="Lamp 02, Update LED intensity"
 # Channel input number states for automation
-CHANNEL_450NM_STATE={{  states('input_number.elixia_2_channel_450nm') | round(0) }}
-CHANNEL_660NM_STATE={{  states('input_number.elixia_2_channel_660nm') | round(0) }}
-CHANNEL_735NM_STATE={{  states('input_number.elixia_2_channel_735nm') | round(0) }}
-CHANNEL_5700K_STATE={{  states('input_number.elixia_2_channel_5700k') | round(0) }}   
+L2CHANNEL_450NM_STATE={{  states('input_number.elixia_2_channel_450nm') | round(0) }}
+L2CHANNEL_660NM_STATE={{  states('input_number.elixia_2_channel_660nm') | round(0) }}
+L2CHANNEL_735NM_STATE={{  states('input_number.elixia_2_channel_735nm') | round(0) }}
+L2CHANNEL_5700K_STATE={{  states('input_number.elixia_2_channel_5700k') | round(0) }}   
 
-# Ønsket fuktighet
+
+#Cooling PID
+COOLING_PID_CMD_REQ_AUTOMATION_ALIAS="Cooling PID, enable/disable"
+MQTT_COOLING_PID_ENABLE_CMD_REQ="cmd/cooling_pid/req"
+PID_CMD_REQ_INTERVAL_SEC= 30
+#Heating PID
+HEATING_PID_CMD_REQ_AUTOMATION_ALIAS = "Heating PID, enable/disable"
+MQTT_HEATING_PID_ENABLE_CMD_REQ="cmd/heating_pid/req"
+
+#CO2 PID
+CO2_PID_CMD_REQ_AUTOMATION_ALIAS = "CO2 PID, enable/disable"
+MQTT_CO2_PID_ENABLE_CMD_REQ="cmd/co2_pid/req"
+
+# Reference humidity
 MQTT_REF_HUMID_CMD_REQ="cmd/refhumid/req"
 MQTT_REF_HUMID_CMD_RES="cmd/refhumid/res"
-MQTT_REF_HUMID_DT_REQ="dt/refhumid/req"
-MQTT_REF_HUMID_DT_RES="dt/refhumid/res"
-REF_HUMID_CMD_REQ_AUTOMATION_ALIAS="Ref Humid, Update Ref humid"
+MQTT_REF_HUMID_CMD_REQ_AUTOMATION_ALIAS="Ref Humid, Update Ref humid"
 # Channel input number states for automation
 REF_HUMID={{  states('input_number.humid_ref') | round(0) }}
 
-# Ønsket temp
+# Reference temperature
 MQTT_REF_TEMP_CMD_REQ="cmd/reftemp/req"
 MQTT_REF_TEMP_CMD_RES="cmd/reftemp/res"
-MQTT_REF_TEMP_DT_REQ="dt/reftemp/req"
-MQTT_REF_TEMP_DT_RES="dt/reftemp/res"
-REF_TEMP_CMD_REQ_AUTOMATION_ALIAS="Ref temp, Update Ref temp"
+MQTT_REF_TEMP_CMD_REQ_AUTOMATION_ALIAS="Ref temp, Update Ref temp"
 # Channel input number states for automation
-REF_HUMID={{  states('input_number.temp_ref') | round(0) }}
+REF_TEMP={{  states('input_number.temp_ref') | round(0) }}
+
+MQTT_REF_CO2_CMD_REQ="cmd/refco2/req"
+MQTT_REF_CO2_CMD_RES="cmd/refco2/res"
+MQTT_REF_CO2_DT_REQ="dt/refco2/req"
+MQTT_REF_CO2_DT_RES="dt/refco2/res"
+MQTT_REF_CO2_CMD_REQ_AUTOMATION_ALIAS="Ref CO2, Update Ref CO2"
+REF_CO2 = {{  states('input_number.co2_ref') | round(0) }}
 
 
 
@@ -576,9 +592,3 @@ GROW_DRAINTIME = 150
 GROW_TOGGLE_ID = "input_boolean.grow_control_toggle"
 GROW_RESET_TIME = 3600
 
-
-# Referanse for fuktighet fra HA
-Ref_humidity = "input_number.humid_ref"
-
-# Referanse for temperatur fra HA
-Ref_tempearure = "input_number.temp_ref"
